ns/caddy-demo/deployment.yaml
# https://kubernetes.io/docs/concepts/workloads/controllers/deployment/
apiVersion: apps/v1
kind: Deployment
metadata:
  name: caddy-deployment
  namespace: caddy-demo
  labels:
    app: caddy
spec:
  selector:
    matchLabels:
      app: caddy
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/default-container:  caddy
      labels:
        app: caddy
    spec:
      # initContainers:
        # Init containers are exactly like regular containers, except:
          # - Init containers always run to completion.
          # - Each init container must complete successfully before the next one starts.
      containers:
      - name: caddy
        image: caddy:2.8.4-alpine
        imagePullPolicy: IfNotPresent
        resources:
          requests:
            cpu: 400m
            memory: 400Mi
          limits:
            cpu: 500m
            memory: 500Mi
        livenessProbe:
          tcpSocket:
            port: 80
          initialDelaySeconds: 5
          timeoutSeconds: 5
          successThreshold: 1
          failureThreshold: 3
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          timeoutSeconds: 2
          successThreshold: 1
          failureThreshold: 3
          periodSeconds: 10
      restartPolicy: Always
---
