ns/caddy-demo/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: caddy-svc
  namespace: caddy-demo
spec:
  selector:
    app: caddy
  type: ClusterIP 
  ports:
  - name: caddy-svc
    protocol: TCP
    port: 80 
    targetPort: 80
---
