ns/caddy-demo/cilium-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: caddy-ingress
  namespace: caddy-demo
spec:
  ingressClassName: cilium
  rules:
  - http:
      paths:
      - backend:
          service:
            name: caddy
            port:
              number: 80
        path: /
        pathType: Prefix
